<resources>
    <string name="app_name">Rick and Morty</string>
    <string name="title_characters">Characters</string>
    <string name="title_locations">Locations</string>
    <string name="title_episods">Episods</string>
    <string name="name">Name:</string>
    <string name="species">Species:</string>
    <string name="status">Status:</string>
    <string name="gender">Gender:</string>
    <string name="episodes">Episodes:</string>
    <string name="created">Created:</string>
    <string name="url">Url:</string>
    <string name="location">Location:</string>
    <string name="origin">Origin:</string>
    <string name="type">Type:</string>
    <string name="id">Id:</string>
    <string name="air_date">Air date:</string>
    <string name="episode">Episode:</string>
    <string name="dimension">Dimension:</string>
</resources>